samples/_failures_safe/1761425951_505873_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6b0cade.c: In function ‘main’:
./samples/SAFE/__tmp_b6b0cade.c:137:12: error: missing terminating " character
  137 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_b6b0cade.c:137:5: error: expected expression at end of input
  137 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_b6b0cade.c:137:5: error: expected declaration or statement at end of input
